[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rajan_nse"
version = "1.0.0"
authors = [
  { name="Rajan Bajaj", email="rajanbajajkota@gmail.com" },
]
description = "A python package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/rajanbajaj/rajan_nse"
Issues = "https://github.com/rajanbajaj/rajan_nse/issues"
